API calls for getting user info and extracting the drafts array

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ PORT=8000
 CLIENT_ID=991915657965-eq7vu1hketj71dirkpunois5mh1om04n.apps.googleusercontent.com
 CLIENT_SECRET=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
 REDIRECT_URI=https://developers.google.com/oauthplayground
-REFRESH_TOKEN=<your-refresh-token>
+REFRESH_TOKEN=1//04_afbIfBUSgkCgYIARAAGAQSNwF-L9Irgb_emx63C-WijiWfIHSbE7vtOmnVnyssWjiWH0HyMmP8Iv2VdNVDLOWCC5fxJ1FTdqM
