--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "googleapis": "^111.0.0",
     "node": "^19.6.0",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "pretty-print-json": "^1.4.0"
   }
 }
